--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@ a {
 }
 .img1 {
     height: 50px;
-    width: 45%;
+    width: 100%;
 }
 button {
     padding: 9px 25px;
@@ -51,11 +51,11 @@ button:hover {
 }
 .jonnah {
     width: 400px;
-    height: 60%;
+    height: 50%;
 }
 .hero {
     margin-top: 0px;
-    height: 50%;
+    height: 70%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -102,3 +102,87 @@ li {
 canvas{
     margin: 0 auto;
     }
+    
+    ul {list-style-type: none;}
+    body {font-family: Verdana, sans-serif;}
+    
+    /* Month header */
+    .month {
+      padding: 50px 20px;
+      background: #337357;
+      text-align: center;
+    }
+    
+    /* Month list */
+    .month ul {
+      margin: 0;
+      padding: 0;
+    }
+    
+    .month ul li {
+      color: white;
+      font-size: 20px;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+    }
+    
+    /* Previous button inside month header */
+    .month .prev {
+      float: left;
+      padding-top: 10px;
+    }
+    
+    /* Next button */
+    .month .next {
+      float: right;
+      padding-top: 10px;
+    }
+    
+    /* Weekdays (Mon-Sun) */
+    .weekdays {
+      margin: 0;
+      padding: 5px 0;
+      background-color:#ddd;
+    }
+    
+    .weekdays li {
+      display: inline-block;
+      width: 12.6%;
+      color: #666;
+      text-align: center;
+    }
+    
+    /* Days (1-31) */
+    .days {
+      padding: 10px 0;
+      background: #eee;
+      margin: 0;
+    }
+    
+    .days li {
+      list-style-type: none;
+      display: inline-block;
+      width: 12.6%;
+      text-align: center;
+      margin-bottom: 5px;
+      font-size:12px;
+      color: #777;
+    }
+    .days li:hover {
+        list-style-type: none;
+        display: inline-block;
+        width: 12.6%;
+        text-align: center;
+        margin-bottom: 5px;
+        font-size:12px;
+        color: rgb(252, 252, 252);
+        background: #854D27;
+      }
+    
+    /* Highlight the "current" day */
+    .days li .active {
+      padding: 5px;
+      background: rgb(230, 196, 43);
+      color: white !important
+    }
+    
